PUT#update Sequence.
